startkde: Move startup sound into a dedicated plasma-startupsound service

The startup sound is only supposed to play once the session is up.
The legacy codepath played it at the end whereas the systemd one plays
it as soon as the workspace target is *started*.

Add a dedicated `plasma-startupsound` service that is executed once the
workspace target is reached to ensure the sound doesn't play prematurely.

BUG: 510923